<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/relativeLayout_introduction"
    android:visibility="gone"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:layout_marginBottom="60dp"
    android:paddingBottom="20dp"
    android:background="@color/white"
    android:elevation="10dp">
    <TextView
        android:id="@+id/introduction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instruction"
        android:textSize="14sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        />
    <LinearLayout
        android:id="@+id/linearlayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/introduction"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/step1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step1"
            android:textSize="12sp"
            android:textColor="@color/md_grey_400"
            android:fontFamily="sans-serif"
            />
        <TextView
            android:paddingLeft="10dp"
            android:layout_alignLeft="@+id/step1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/step1_text"
            style="@style/IntroductionText"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearlayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/linearlayout1"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step2"
            android:textSize="12sp"
            android:textColor="@color/md_grey_400"
            android:fontFamily="sans-serif"
            />
        <TextView
            android:paddingLeft="10dp"
            android:layout_alignLeft="@+id/step1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/step2_text"
            style="@style/IntroductionText"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearlayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/linearlayout2"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step3"
            android:textSize="12sp"
            android:textColor="@color/md_grey_400"
            android:fontFamily="sans-serif"
            />
        <TextView
            android:paddingLeft="10dp"
            android:layout_alignLeft="@+id/step1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/step3_text"
            style="@style/IntroductionText"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearlayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/linearlayout3"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step4"
            android:textSize="12sp"
            android:textColor="@color/md_grey_400"
            android:fontFamily="sans-serif"
            />
        <TextView
            android:paddingLeft="10dp"
            android:layout_alignLeft="@+id/step1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/step4_text"
            style="@style/IntroductionText"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearlayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/linearlayout4"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step5"
            android:textSize="12sp"
            android:textColor="@color/md_grey_400"
            android:fontFamily="sans-serif"
            />
        <TextView
            android:paddingLeft="10dp"
            android:layout_alignLeft="@+id/step1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/step5_text"
            style="@style/IntroductionText"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearlayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/linearlayout5"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step6"
            android:textSize="12sp"
            android:textColor="@color/md_grey_400"
            android:fontFamily="sans-serif"
            />
        <TextView
            android:paddingLeft="10dp"
            android:layout_alignLeft="@+id/step1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/step6_text"
            style="@style/IntroductionText"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/below1"
        android:layout_below="@id/linearlayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/end_instruction1"
        style="@style/IntroductionText"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        />
    <TextView
        android:layout_below="@id/below1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/end_instruction2"
        style="@style/IntroductionText"
        android:gravity="center_horizontal"
        />
</RelativeLayout>